--- a/00.md
+++ b/00.md
@@ -118,6 +118,14 @@ Sala CBM_B
 
 ---
 
+# Podręczniki
+
+![h:600](img/rmp.png)
+
+[Research Methods in Psychology, 4th Edition](https://kpu.pressbooks.pub/psychmethods4e/)
+
+---
+
 # Proces badawczy - powtórzenie
 
 ![](img/z02nauka_diagram.png)
