do porownań miedzygrupowych

--- a/03.md
+++ b/03.md
@@ -35,14 +35,43 @@ $$ wynik testu = wynik prawdziwy + błąd $$
 
 * Błąd może być losowy
 * Błąd może być systematyczny
-* Średnia błędu losowego dąży do 0
-* W praktyce często z błędem da się żyć, jeżeli jesteśmy w stanie go **oszacować**
+* **Średnia błędu losowego dąży do 0**
 
+---
+
+# Rzucamy kostką
+
+* Rzucamy 1 raz... Jaki jest średni wynik?
+* Rzucamy 2 razy... Jaki jest średni wynik?
+* Rzucamy 3 razy... Jaki jest średni wynik?
+* Rzucamy 10 razy... Jaki jest średni wynik?
+* Rzucamy 1 000 razy... Jaki jest średni wynik?
+
+---
+
+# Prawo dużych liczb
+
+![h:650](img/large_numbers_1.png)]
+
+---
+
+![h:650](img/large_numbers_2.png)]
+
+---
+
+# Mierzymy gorączkę...
+
+![h:650](img/large_numbers_3.png)]
+
+---
+
+* **Średnia błędu losowego przy wielokrotnych pomiarach dąży do 0!**
 
 ---
 
 # Metody badania rzetelności
 
+* W praktyce często z błędem da się żyć, jeżeli jesteśmy w stanie go **oszacować**
 * Test-retest: czy dwa pomiary tym samym testem w różnym czasie dadzą ten sam wynik?
 * Zgodność wewnętrzna: czy poszczególne pozycje w kwestionariuszu mierzą ten sam konstrukt?
 
