--- a/08.md
+++ b/08.md
@@ -59,6 +59,11 @@ class: invert
 * Najczęściej w psychologii badamy **skomplikowane** zjawiska, które mają więcej niż jedną przyczynę
 * Wtedy jedynym sposobem na ich opis jest modelowanie za pomocą wielu zmiennych
 
+---
+
+# Ilustracja modelu z dwoma zmiennymi
+
+<https://miabellaai.net/regression.html>
 
 ---
 
