--- a/02.md
+++ b/02.md
@@ -38,10 +38,20 @@ Czy metoda mierzy to, co ma mierzyć?
 
 # Rodzaje trafności
 
+* Trafność teoretyczna (theoretical validity)
 * Trafność fasadowa (face validity)
 * Trafność treściowa (content validity)
 * Trafność kryterialna (criterion validity)
+* Trafność diagnostyczna i prognostyczna
+* Trafność zbieżna i różnicowa
 
+
+---
+
+# Trafność teoretyczna
+
+* Czy pomiar zmiennej jest zgodny z założeniami teorii psychologicznej na temat tej zmiennej?
+* Najważniejszy rodzaj trafności, pozostałe rodzaje pomagają w ustaleniu trafności teoretycznej
 
 ---
 
